DuPont DevSB/src/objects/BA_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAC_Currency__c</fullName>
        <label>BAC Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BAC_Progress__c</fullName>
        <label>BAC Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Campaigns</fullName>
                </value>
                <value>
                    <fullName>Requirements Commenced</fullName>
                </value>
                <value>
                    <fullName>Specifications Generated</fullName>
                </value>
                <value>
                    <fullName>Solutioning Started</fullName>
                </value>
                <value>
                    <fullName>Solutions Created</fullName>
                </value>
                <value>
                    <fullName>Pricing Completed</fullName>
                </value>
                <value>
                    <fullName>Commercials Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BAC_Sensitive_Country__c</fullName>
        <description>Sensitive destination countries</description>
        <label>BAC Sensitive Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Libya</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>South Sudan</fullName>
                </value>
                <value>
                    <fullName>Yemen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body_Armor_Configuration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Body Armor Configuration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Budget_for_Year_1__c</fullName>
        <label>Budget Year 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_for_Year_2__c</fullName>
        <label>Budget Year 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_for_Year_3__c</fullName>
        <label>Budget Year 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closure_Reason__c</fullName>
        <label>Closure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract awarded to DuPont / Partner and fulfilled</fullName>
                </value>
                <value>
                    <fullName>Contract awarded to competitor</fullName>
                </value>
                <value>
                    <fullName>Tender differed / postponed</fullName>
                </value>
                <value>
                    <fullName>Tender Cancelled</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closure_Remark__c</fullName>
        <label>Closure Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_by_IOS__c</fullName>
        <label>Created by (IOS)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_date_IOS__c</fullName>
        <label>Created date (IOS)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <label>End User Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Region__c</fullName>
        <label>End User Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_of_Helmets__c</fullName>
        <label>Number of Helmets (Total)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Vests_for_Year_1__c</fullName>
        <label>Body Armour Quantity Y1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Vests_for_Year_2__c</fullName>
        <label>Body Armour Quantity Y2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Vests_for_Year_3__c</fullName>
        <label>Body Armour Quantity Y3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Helmets_Y1__c</fullName>
        <label>Number of Helmets Y1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Helmets_Y2__c</fullName>
        <label>Number of Helmets Y2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Helmets_Y3__c</fullName>
        <label>Number of Helmets Y3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Plates_Y1__c</fullName>
        <label>Number of Plates Y1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Plates_Y2__c</fullName>
        <label>Number of Plates Y2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Plates_Y3__c</fullName>
        <label>Number of Plates Y3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Plates__c</fullName>
        <label>Number of Plates (Total)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vest_Y1__c</fullName>
        <label>Number of Vest Y1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vest_Y2__c</fullName>
        <label>Number of Vest Y2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vest_Y3__c</fullName>
        <label>Number of Vest Y3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vest__c</fullName>
        <label>Number of Vest (Total)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sensitive_Destination_Committee_Approv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sensitive Destination Committee Approv.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_of_IT__c</fullName>
        <label>Source of IT</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIT-Brazil</fullName>
                </value>
                <value>
                    <fullName>DKC-Hyderabad ~India</fullName>
                </value>
                <value>
                    <fullName>ETC-Meyrin ~Switzerland</fullName>
                </value>
                <value>
                    <fullName>Richmond ~USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre- Tender Solicitation</fullName>
                </value>
                <value>
                    <fullName>Tender in progress</fullName>
                </value>
                <value>
                    <fullName>Tender Bid Submissions</fullName>
                </value>
                <value>
                    <fullName>Solutions Evaluation</fullName>
                </value>
                <value>
                    <fullName>Tender Contract Award</fullName>
                </value>
                <value>
                    <fullName>Campaign Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing_Req_Comment_Bullet__c</fullName>
        <label>Testing Req Comment (Bullet)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Testing_Req_Comment_Common__c</fullName>
        <label>Testing Req Comment (Common)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Testing_Req_Comment_Fragment__c</fullName>
        <label>Testing Req Comment (Fragment)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Testing_Req_Comment_NBT__c</fullName>
        <label>Testing Req Comment (NBT)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <label>Total Budget</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>last_modified_date_IOS__c</fullName>
        <label>last modified date (iOS)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>last_modify_by_IOS__c</fullName>
        <label>last modify by (IOS)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technicalOfferSubmissionDate__c</fullName>
        <label>technicalOfferSubmissionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tenderSubmissionDate__c</fullName>
        <label>tenderSubmissionDate</label>
        <type>DateTime</type>
    </fields>
    <label>BA Configuration</label>
    <nameField>
        <label>BA Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BA Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>